--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+   <img src="./banner.avif" alt="foto da cafeteria">
     <h1>Cafeteria</h1>
 
     <p id="missao"><em> Fundada em 1987, por uma familia tradicional Curitibana esta localizada em uma charmosa esquina no centro da cidade de Curitiba, a cafeteria é um refúgio acolhedor para amantes de café.</p>
