--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 </head>
 <body>
-   <img src="./banner.avif" alt="foto da cafeteria">
+   <img src="./Café-Habitual.jpg" alt="foto da cafeteria">
     <h1>Cafeteria</h1>
-
     <p id="missao"><em> Fundada em 1987, por uma familia tradicional Curitibana esta localizada em uma charmosa esquina no centro da cidade de Curitiba, a cafeteria é um refúgio acolhedor para amantes de café.</p>
     <p>Com seu aroma irresistível e ambiente aconchegante ,é o lugar perfeito para desfrutar de uma pausa tranquila ou encontrtar amigos</p>
     <p>A equipe simpática e atenciosa está sempre pronta para preparar as mais deliciosas bebidas, desde os clássicos expressos até os criativos lattes artesanais</p>
