--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <p>Com seu aroma irresistível e ambiente aconchegante ,é o lugar perfeito para desfrutar de uma pausa tranquila ou encontrtar amigos</p>
     <p>A equipe simpática e atenciosa está sempre pronta para preparar as mais deliciosas bebidas, desde os clássicos expressos até os criativos lattes artesanais</p>
 
+    <ul>
+
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        
+    </ul>
     
 </body>
 </html>
