--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <ul>
 
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        
+        <li>salgados </li>
+        <li>doces</li>
+        <li>bebidas</li>
+
     </ul>
     
 </body>
