--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-   <img src="./Café-Habitual.jpg" alt="foto da cafeteria">
+   <img src="./Café-Habitual.jpg" alt="">
     <h1>Cafeteria</h1>
     <p id="missao"><em> Fundada em 1987, por uma familia tradicional Curitibana esta localizada em uma charmosa esquina no centro da cidade de Curitiba, a cafeteria é um refúgio acolhedor para amantes de café.</p>
     <p>Com seu aroma irresistível e ambiente aconchegante ,é o lugar perfeito para desfrutar de uma pausa tranquila ou encontrtar amigos</p>
@@ -26,7 +26,7 @@
         <li>bebidas</li>
 
     </ul>
-    
+    <img src="caf-da-manh-em-Braslia_capa-e1560882564741.jpg" alt="">
 </body>
 </html>
 
