--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>bebidas</li>
 
     </ul>
-    <img src="caf-da-manh-em-Braslia_capa-e1560882564741.jpg" alt="">
+    <img id="foto1" src="caf-da-manh-em-Braslia_capa-e1560882564741.jpg" alt="">
 </body>
 </html>
 
