--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p id="missao"><em> Fundada em 1987, por uma familia tradicional Curitibana esta localizada em uma charmosa esquina no centro da cidade de Curitiba, a cafeteria é um refúgio acolhedor para amantes de café.</p>
     <p>Com seu aroma irresistível e ambiente aconchegante ,é o lugar perfeito para desfrutar de uma pausa tranquila ou encontrtar amigos</p>
     <p>A equipe simpática e atenciosa está sempre pronta para preparar as mais deliciosas bebidas, desde os clássicos expressos até os criativos lattes artesanais</p>
-
+        <div id="conteudo">
     <ul>
 
         <li>salgados </li>
@@ -27,6 +27,7 @@
 
     </ul>
     <img id="foto1" src="caf-da-manh-em-Braslia_capa-e1560882564741.jpg" alt="">
+</div>
 </body>
 </html>
 
